<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextcnic"
        android:hint="@string/enter_patient_cnic"
        android:inputType="number"/>
    <EditText
        android:layout_below="@id/editTextcnic"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextpatientName"
        android:hint="@string/enter_patient_name"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_below="@id/editTextpatientName"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextAge"
        android:hint="@string/enter_patient_age"
        android:inputType="number"/>
    <EditText
        android:layout_below="@+id/editTextAge"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextdoctorName"
        android:hint="@string/enter_doctor_name"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_below="@+id/editTextdoctorName"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextcharges"
        android:hint="@string/total_charges"
        android:inputType="number"/>
    <EditText
        android:layout_below="@+id/editTextcharges"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:id="@+id/editTextdate"
        android:hint="@string/enter_date"
        android:inputType="date"/>
    <EditText
        android:layout_below="@+id/editTextdate"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/enter_to_send"
        android:id="@+id/editTextSend"/>
    <EditText
        android:layout_below="@+id/editTextSend"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/write_recive_status"
        android:id="@+id/editTextRecive"/>

    <Button
        android:layout_below="@+id/editTextRecive"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddArtist"
        android:text="@string/add_patient"/>


</RelativeLayout>